--- a/scss/_generate.scss
+++ b/scss/_generate.scss
@@ -18,6 +18,8 @@ $color-menu-item: #6f6e6e;
 $color-header-bot: #f8f3f4;
 $color-grey-2: #636363;
 $color-pink-active: #ef5b70;
+$color-bg-product: #F7F7F7;
+$color-product-desc: #5E5E5E;
 @mixin flex($jc, $ai) {
     display: flex;
     justify-content: $jc;
