--- a/scss/style.scss
+++ b/scss/style.scss
@@ -4,6 +4,7 @@
 @import "header";
 @import "header-bottom";
 @import "banner";
+@import "product";
 @import "category";
 @import "card-box";
 @import "advantages";
